--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "author": "Sam <54m152@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "cypress": "^11.1.0",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
+    "test": "jest",
     "test-integration": "cypress open --project tests/integration/"
   },
   "files": [
