Fixes #1 - Remove duplicate encoding of query string into request key

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "exclude": [
     "integration-tests",
-    "lib"
+    "lib",
+    "**/*.test.ts"
   ],
   "include": [
     "node_modules/cypress",
