--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@jest/globals": "^29.3.1",
     "cypress": "^11.1.0",
     "jest": "^29.3.1",
+    "prettier": "^2.8.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
   },
@@ -17,6 +18,7 @@
     "watch": "tsc --watch",
     "test": "jest",
     "test-integration": "CYPRESS_API_URL='https://jsonplaceholder.cypress.io' cypress open --project integration-tests",
+    "pretty": "prettier src --write",
     "release-patch": "yarn run build && npm version patch && npm publish"
   },
   "files": [
